@@ -1,5 +1,6 @@
 Changes for 1.7.1
 
+ - [DEV-411] improved performance of trends module (Sasha)
  - [DEV-428] added new TELNET check 'telnet.run[]' (Sasha)
  - [DEV-428] added new SSH check 'ssh.run[]' (Sasha)
  - [DEV-339] added internal check zabbix[wcache,*] for cache module (Sasha)
